--- a/templates/results.html
+++ b/templates/results.html
@@ -2,6 +2,7 @@
 <html lang="en" >
 
 <head>
+
   <meta charset="UTF-8">
   <title>Review Page</title>
 
@@ -16,6 +17,9 @@
 
 <body>
 
+    <div class="background-image"></div>
+
+
   <div class="table-users">
    <div class="header">Prediction</div>
 
@@ -25,5 +29,15 @@
 
 
 </body>
+
+    <style>
+body {
+  background-image: url('image.jpg');
+  width: 200px
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+</style>
 
 </html>
