--- a/templates/index.html
+++ b/templates/index.html
@@ -7,17 +7,18 @@
 {% endblock %}
 
 {% block body %}
+<div class="background-image"></div>
 <div class="content">
     <h1 style="text-align: center">Predict Your chances for Admission</h1>
 
     <div class="form">
         <form action="/predict" method="POST">
-            <input type="number" name="gre_score" id="gre_score" placeholder="GRE Score">
-            <input type="number" name="toefl_score" id="toefl_score" placeholder="TOEFL Score">
-            <input type="number" name="university_rating" id="university_rating" placeholder="University Rating">
-            <input type="number" name="sop" id="sop" placeholder="SOP Score">
-            <input type="number" name="lor" id="lor" placeholder="LOR Score">
-            <input type="number" name="cgpa" id="cgpa"placeholder="CGPA" step="any">
+            <input type="number" name="gre_score" id="gre_score" placeholder="GRE Score(0-340)" step="0.01">
+            <input type="number" name="toefl_score" id="toefl_score" placeholder="TOEFL Score(0-120)" step="0.01">
+            <input type="number" name="university_rating" id="university_rating" placeholder="University Rating(0-5)" step="0.01">
+            <input type="number" name="sop" id="sop" placeholder="SOP Score(0-5)" step="0.01">
+            <input type="number" name="lor" id="lor" placeholder="LOR Score(0-5)" step="0.01">
+            <input type="number" name="cgpa" id="cgpa"placeholder="CGPA(0-10)" step="0.01">
             <select name="research" id="research">
   <option value="yes">Yes</option>
   <option value="no">No</option>
@@ -26,4 +27,13 @@
         </form>
     </div>
 </div>
+    <style>
+body {
+  background-image: url('image.jpg');
+  width: 200px
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+</style>
 {% endblock %}
